エンジン慣れるようでFBX導入(今はYで攻撃ー＞攻撃が終わったらアイドル状態に戻るまで　Playerてあるけど練習用だから崩しても大丈夫です) あとFBXObjectの方少し追加しました

--- a/SoulHunter.vcxproj
+++ b/SoulHunter.vcxproj
@@ -282,6 +282,7 @@
     <ClCompile Include="SourceCode\gamesystem\actor\EditorSceneActor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\actor\IntroductionSceneActor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\actor\LoadSceneActor.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\actor\Player.cpp" />
     <ClCompile Include="SourceCode\gamesystem\actor\PlaySceneActor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\actor\TitleSceneActor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\gamecamera\CameraWork.cpp" />
@@ -360,6 +361,7 @@
     <ClInclude Include="SourceCode\gamesystem\actor\EditorSceneActor.h" />
     <ClInclude Include="SourceCode\gamesystem\actor\IntroductionSceneActor.h" />
     <ClInclude Include="SourceCode\gamesystem\actor\LoadSceneActor.h" />
+    <ClInclude Include="SourceCode\gamesystem\actor\Player.h" />
     <ClInclude Include="SourceCode\gamesystem\actor\PlaySceneActor.h" />
     <ClInclude Include="SourceCode\gamesystem\actor\TitleSceneActor.h" />
     <ClInclude Include="SourceCode\gamesystem\gamecamera\CameraWork.h" />
