--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Pos]
-Pos=60,60
-Size=107,82
+Pos=150,141
+Size=247,92
 Collapsed=0
 
 [Window][Camera]
-Pos=333,109
-Size=128,65
+Pos=289,125
+Size=271,71
+Collapsed=0
+
+[Window][param]
+Pos=60,60
+Size=79,65
 Collapsed=0
 
