--- a/imgui.ini
+++ b/imgui.ini
@@ -6,15 +6,20 @@ Collapsed=0
 [Window][Pos]
 Pos=150,141
 Size=247,92
-Collapsed=0
+Collapsed=1
 
 [Window][Camera]
 Pos=289,125
 Size=271,71
-Collapsed=0
+Collapsed=1
 
 [Window][param]
 Pos=60,60
 Size=79,65
+Collapsed=0
+
+[Window][Enemy]
+Pos=60,60
+Size=114,65
 Collapsed=0
 
