--- a/imgui.ini
+++ b/imgui.ini
@@ -9,9 +9,9 @@ Size=247,92
 Collapsed=1
 
 [Window][Camera]
-Pos=289,125
-Size=271,71
-Collapsed=1
+Pos=992,224
+Size=271,349
+Collapsed=0
 
 [Window][param]
 Pos=60,60
@@ -27,4 +27,9 @@ Collapsed=0
 Pos=0,0
 Size=1280,720
 Collapsed=0
+
+[Window][BoxParam]
+Pos=454,450
+Size=561,493
+Collapsed=1
 
