--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=0,500
+Size=300,300
 Collapsed=0
 
 [Window][Pos]
@@ -9,8 +9,8 @@ Size=247,92
 Collapsed=1
 
 [Window][Camera]
-Pos=833,547
-Size=271,349
+Pos=737,518
+Size=276,349
 Collapsed=0
 
 [Window][param]
@@ -29,7 +29,12 @@ Size=1280,720
 Collapsed=0
 
 [Window][BoxParam]
-Pos=982,227
-Size=442,785
+Pos=0,400
+Size=300,300
+Collapsed=0
+
+[Window][BoxList]
+Pos=300,400
+Size=300,300
 Collapsed=0
 
