2dのmapえでぃた作成途中　マップのおおきささ変更デバグ起きるん何故

--- a/imgui.ini
+++ b/imgui.ini
@@ -44,7 +44,12 @@ Size=300,200
 Collapsed=0
 
 [Window][ScneChange]
-Pos=603,618
-Size=116,85
+Pos=952,367
+Size=112,113
+Collapsed=0
+
+[Window][2DEditor]
+Pos=857,214
+Size=116,239
 Collapsed=0
 
