--- a/imgui.ini
+++ b/imgui.ini
@@ -51,6 +51,8 @@ Collapsed=0
 [Window][2DEditor]
 Pos=857,214
 Size=116,239
+Collapsed=0
+
 [Window][Player]
 Pos=60,60
 Size=242,222
@@ -59,5 +61,10 @@ Collapsed=0
 [Window][Bullet]
 Pos=328,465
 Size=385,156
+Collapsed=0
+
+[Window][Food]
+Pos=60,60
+Size=270,314
 Collapsed=0
 
